Release of version 1.3.2